feat : spiderman section and bg fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@theme {
+  --bg-app-gradient: linear-gradient(180deg, #000000 0%, #000000 50% ,#4A2800 100%);
+}
 body {
   background-color: black;
 }
