--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @theme {
   --bg-app-gradient: linear-gradient(180deg, #000000 0%, #000000 50% ,#4A2800 100%);
+  --bg-app-gradient2: linear-gradient(180deg, #000000 0%, #000000 50% ,#080300 100%);
 }
 
 body {
